created db changeset for currency details table

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: classpath:/db/changelog/changes/create-table-basic-details.sql
   - include:
       file: classpath:/db/changelog/changes/create-table-user-details.sql
+  - include:
+      file: classpath:/db/changelog/changes/create-table-currency-details.sql
