created db changeset for payment_mode_details and expenses_details table

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -11,3 +11,7 @@ databaseChangeLog:
       file: classpath:/db/changelog/changes/create-table-currency-details.sql
   - include:
       file: classpath:/db/changelog/changes/create-table-expenses-category-details.sql
+  - include:
+      file: classpath:/db/changelog/changes/create-table-payment-mode-details.sql
+  - include:
+      file: classpath:/db/changelog/changes/create-table-expenses-details.sql
