--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Build and Test (Gradle)
+name: Build, Test, and Coverage (Gradle)
 
 on:
   push:
@@ -23,11 +23,22 @@ jobs:
     - name: Grant execute permission for Gradle wrapper
       run: chmod +x gradlew
 
-    - name: Clean project
+    - name: Clean
       run: ./gradlew clean
 
-    - name: Build project
-      run: ./gradlew build --no-daemon
+    - name: Build and test
+      run: ./gradlew build test jacocoTestReport --no-daemon
 
-    - name: Run unit tests
-      run: ./gradlew test --no-daemon
+    - name: Upload Test Results
+      if: always() # Ensure this runs even if tests fail
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results
+        path: build/reports/tests/test
+
+    - name: Upload JaCoCo Report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: jacoco-report
+        path: build/reports/jacoco/test/html
